// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avatar/Avatar renders with a name 1`] = `
<span
  aria-label="Avatar for Jon Snow"
  className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--salmon"
  role="img"
>
  <span
    aria-hidden="true"
    className="hig__avatarV2__initials"
  >
    JS
  </span>
</span>
`;

exports[`avatar/Avatar renders with all props 1`] = `
<span
  aria-label="Avatar for Jon Snow"
  className="hig__avatarV2 hig__avatarV2--size--large hig__avatarV2__background--salmon"
  role="img"
>
  <span
    className="hig__avatarV2__image-wrapper"
  >
    <img
      alt="Avatar image of Jon Snow"
      className="hig__avatarV2__image"
      onError={[Function]}
      src="http://placekitten.com/g/64/64"
    />
  </span>
  <span
    aria-hidden="true"
    className="hig__avatarV2__initials"
  >
    JS
  </span>
</span>
`;

exports[`avatar/Avatar renders with an image 1`] = `
<span
  aria-label="Avatar for Anonymous User"
  className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
  role="img"
>
  <span
    className="hig__avatarV2__image-wrapper"
  >
    <img
      alt="Avatar image of Anonymous User"
      className="hig__avatarV2__image"
      onError={[Function]}
      src="http://placekitten.com/g/64/64"
    />
  </span>
  <span
    aria-hidden="true"
    className="hig__avatarV2__initials"
  >
    AU
  </span>
</span>
`;

exports[`avatar/Avatar renders without props 1`] = `
<span
  aria-label="Avatar for Anonymous User"
  className="hig__avatarV2 hig__avatarV2--size--medium-32 hig__avatarV2__background--turquoise"
  role="img"
>
  <span
    aria-hidden="true"
    className="hig__avatarV2__initials"
  >
    AU
  </span>
</span>
`;
